--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-              Ayushvatica
+              Ayushvatika
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
